changed rows to min content to prevent large gap

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ body{
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    grid-template-rows: min-content;
     gap: 15px;
     overflow: auto;
 }
